deployment/mainnet-production/all.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mainnet-grillchat
  name: mainnet-grillchat
  namespace: sub-back
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: mainnet-grillchat
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainnet-grillchat
  namespace: sub-back
  annotations:
    ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.org/client-max-body-size: '10m'
    nginx.ingress.kubernetes.io/proxy-body-size: '10m'
    nginx.ingress.kubernetes.io/client-max-body-size: '10m'

spec:
  ingressClassName: nginx
  rules:
    - host: grillapp.net
      http:
        paths:
          - backend:
              service:
                name: web-app
                port:
                  number: 3003
            path: '/'
            pathType: Prefix

  tls:
    - hosts:
        - grillapp.net
      secretName: mainnet-grill-ssl

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/client-max-body-size: 10m
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.org/client-max-body-size: 10m
  name: grill-c
  namespace: sub-back
spec:
  ingressClassName: nginx
  rules:
    - host: grillapp.net
      http:
        paths:
          - backend:
              service:
                name: mainnet-grillchat
                port:
                  number: 3000
            path: /c
            pathType: Exact
          - backend:
              service:
                name: mainnet-grillchat
                port:
                  number: 3000
            path: /c/
            pathType: Prefix
  tls:
    - hosts:
        - grillapp.net
      secretName: mainnet-grill-ssl
